--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,11 @@ __pycache__/
 # C extensions
 *.so
 
+neural-style-transfer/images/x*
+
+.DS_Store
+*/.DS_Store
+
 # Distribution / packaging
 .Python
 build/
